--- a/Adentis.Teste.Fernando/Adentis.Teste.Fernando.csproj
+++ b/Adentis.Teste.Fernando/Adentis.Teste.Fernando.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Word.cs" />
+    <Compile Include="Helpers\RecyclerViewHolder.cs" />
+    <Compile Include="Helpers\RecyclerViewAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
